--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
         </nav>
     </header>
 
+    <main>
+        <section>
+            <article></article>
+            <article></article>
+        </section>
+        <section>
+            <article></article>
+            <article></article>
+        </section>
+        <section>
+            <article></article>
+            <article></article>
+        </section>
+    </main>
+
 </body>
 
 </html>
