--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
             <article></article>
         </section>
     </main>
-
+    <footer>
+        <nav>
+            <ul>
+                <li></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
